--- a/src/Components/DropdownMenu.css
+++ b/src/Components/DropdownMenu.css
@@ -1,22 +1,35 @@
-.dropdownMenu__items {
-  border: 2px solid black;
-  margin: 5px 0px 5px 0px;
-  padding: 10px;
-  background-color: rgb(0, 0, 0);
-  color: rgb(227, 227, 227);
+.dropbtn {
+  background-color: #0aaa0f;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  margin-top: 10px;
 }
 
 .dropdownMenu {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  position: relative;
+  display: inline-block;
 }
 
-.dropdownMenu__items:hover{
-    background-color: rgb(221, 221, 221);
-    color: rgb(0, 0, 0);
+.dropdown-content {
+  display: none;
+  position: absolute;
+  right: 0;
+  background-color: #ffffff;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
 }
-.dropdownMenu__items:active{
-    background-color: rgb(255, 255, 255);
+
+.dropdown-content div {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
 }
+
+.dropdownMenu__items:hover {background-color: #f1f1f1;}
+.dropdownMenu:hover .dropdown-content {display: block;}
+.dropdownMenu:hover .dropbtn {background-color: #3e8e41;}
